Fixed renderer overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     margin: 0;
     padding: 0;
     font: monospace;
+    overflow: hidden;
 }
 canvas{
     padding: 0;
